--- a/index.html
+++ b/index.html
@@ -1,22 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="./style.css">
-</head>
-<body>
-	<section class="richText">
-		<div class="richText__buttons">
-			<button type="button" class="richText__button button__play">Проиграть</button>
-		</div>
-		<h1 class="richText__title">Генератор стандартных анимаций для&nbsp;ТЗ</h1>
-		<div class="richText__separator"></div>
-		<p class="rishText__subtitle">Этот генератор позволяет вам настроить стандартную анимацию появлений с&nbsp;помощью панели в&nbsp;правом верхнем углу, используйте различные настройки для каждого элемента, чтобы посмотреть, как это будет выглядеть в&nbsp;живую и&nbsp;указать верные значения в&nbsp;техническом задании</p>
-		<img src="https://static.tildacdn.com/tild3063-6439-4337-b561-313637393266/web-valley-mountains.png" alt="" class="richText__img">
-	</section>
-	<script src="./script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="dat.gui.min.js"></script>
+    <script>
+      const gui = new dat.GUI();
+			console.log(gui);
+      const f1 = gui.addFolder("Title");
+      const f2 = gui.addFolder("Line");
+      const f3 = gui.addFolder("Description");
+      const f4 = gui.addFolder("Image");
+
+      f1.add(options, "Type", [
+        "fade-In",
+        "fade-In-Right",
+        "fade-In-Top",
+        "fade-In-Bottom",
+        "fade-Out",
+        "fade-Out-Left",
+        "fade-Out-Right",
+        "fade-Out-Top",
+        "fade-Out-Bottom",
+        "fade-In-Size-Center",
+        "fade-In-Size-Left",
+        "fade-In-Size-Right",
+      ]);
+      f1.add(text, "duration");
+    </script>
+  </head>
+  <body>
+    <section class="richText">
+      <div class="richText__buttons">
+        <button type="button" class="richText__button button__play">
+          Проиграть
+        </button>
+      </div>
+      <h1 class="richText__title">
+        Генератор стандартных анимаций для&nbsp;ТЗ
+      </h1>
+      <div class="richText__separator"></div>
+      <p class="rishText__subtitle">
+        Этот генератор позволяет вам настроить стандартную анимацию появлений
+        с&nbsp;помощью панели в&nbsp;правом верхнем углу, используйте различные
+        настройки для каждого элемента, чтобы посмотреть, как это будет
+        выглядеть в&nbsp;живую и&nbsp;указать верные значения в&nbsp;техническом
+        задании
+      </p>
+      <img
+        src="https://static.tildacdn.com/tild3063-6439-4337-b561-313637393266/web-valley-mountains.png"
+        alt=""
+        class="richText__img"
+      />
+    </section>
+    <script src="./script.js"></script>
+  </body>
 </html>
