--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,13 @@
         выглядеть в&nbsp;живую и&nbsp;указать верные значения в&nbsp;техническом
         задании
       </p>
-      <img
-        src="https://static.tildacdn.com/tild3063-6439-4337-b561-313637393266/web-valley-mountains.png"
-        alt=""
-        class="richText__img"
-      />
+      <div class="richText__img-box">
+        <img
+          src="https://static.tildacdn.com/tild3063-6439-4337-b561-313637393266/web-valley-mountains.png"
+          alt=""
+          class="richText__img"
+        />
+      </div>
     </section>
   </body>
 </html>
