change everything and add copyboard

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,12 @@
           class="richText__img"
         />
       </div>
+
+      <button class="generate">generate</button>
+
+      <div class="output"></div>
+
+      <button class="copy">copy</button>
     </section>
   </body>
 </html>
