feat: настроить копирование в буфер параметров в нормальном виде

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <button type="button" class="richText__button button__play">
           Проиграть
         </button>
+        <button type="button" class="richText__button copy">Копировать</button>
       </div>
       <h1 class="richText__title">
         Генератор стандартных анимаций для&nbsp;ТЗ
@@ -31,12 +32,9 @@
           class="richText__img"
         />
       </div>
-
-      <button class="generate">generate</button>
-
-      <div class="output"></div>
-
-      <button class="copy">copy</button>
+    </section>
+    <section class="display-trouble">
+      <p class="display-trouble__text">Я работаю только с пк, ссорен</p>
     </section>
   </body>
 </html>
